--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
   <![endif]-->
 
   <!------------- Document Title -------------->
-  <title>JuteGlo </title>
+  <title>Uomo </title>
 
 </head>
 
@@ -224,7 +224,7 @@
 
     <div class="logo">
       <a href="index.html">
-        <img src="/images/logo.png" alt="JuteGlo" class="logo__image d-block"/>
+        <img src="/images/logo.png" alt="Uomo" class="logo__image d-block"/>
       </a>
     </div><!-- /.logo -->
 
@@ -239,7 +239,7 @@
 
   <nav class="header-mobile__navigation navigation d-flex flex-column w-100 position-absolute top-100 bg-body overflow-auto">
     <div class="container">
-      <form action="#" method="GET" class="search-field position-relative mt-4 mb-3">
+      <form action="search.html" method="GET" class="search-field position-relative mt-4 mb-3">
         <div class="position-relative">
           <input class="search-field__input w-100 border rounded-1" type="text" name="search-keyword"
                  placeholder="Search products"/>
@@ -270,7 +270,7 @@
             </a>
           </li>
           <li class="navigation__item">
-            <a href="about.html" class="navigation__link js-nav-right d-flex align-items-center">About Us
+            <a href="#about" class="navigation__link js-nav-right d-flex align-items-center">About Us
               <svg class="ms-auto" width="7" height="11" viewBox="0 0 7 11"
                    xmlns="http://www.w3.org/2000/svg">
                 <use href="#icon_next_sm"/>
@@ -280,26 +280,35 @@
           </li>
 
           <li class="navigation__item">
-            <a href="products.html" class="navigation__link js-nav-right d-flex align-items-center">Products
+            <a href="product.html" class="navigation__link js-nav-right d-flex align-items-center">Products
               <svg class="ms-auto" width="7" height="11" viewBox="0 0 7 11"
                    xmlns="http://www.w3.org/2000/svg">
                 <use href="#icon_next_sm"/>
               </svg>
             </a>
             <div class="sub-menu position-absolute top-0 start-100 w-100 d-none">
-              <a href="products.html"
+              <a href="product.html"
                  class="navigation__link js-nav-left d-flex align-items-center border-bottom mb-2">
                 <svg class="me-2" width="7" height="11" viewBox="0 0 7 11"
                      xmlns="http://www.w3.org/2000/svg">
                   <use href="#icon_prev_sm"/>
                 </svg>
                 Products</a>
-
+              <ul class="list-unstyled">
+                <li class="sub-menu__item"><a href="#" class="menu-link menu-link_us-s">Promotional Jute
+                  Bags</a></li>
+                <li class="sub-menu__item"><a href="#" class="menu-link menu-link_us-s">Bangladeshi Jute
+                  Bags</a></li>
+                <li class="sub-menu__item"><a href="#" class="menu-link menu-link_us-s">Jute
+                  Fabrics </a></li>
+                <li class="sub-menu__item"><a href="#" class="menu-link menu-link_us-s">Jute Yarn </a>
+                </li>
+              </ul>
             </div>
           </li>
 
           <li class="navigation__item">
-            <a href="faq.html" class="navigation__link js-nav-right d-flex align-items-center">Faq
+            <a href="#faq" class="navigation__link js-nav-right d-flex align-items-center">Faq
               <svg class="ms-auto" width="7" height="11" viewBox="0 0 7 11"
                    xmlns="http://www.w3.org/2000/svg">
                 <use href="#icon_next_sm"/>
@@ -324,9 +333,27 @@
         <span class="d-inline-block ms-2 text-uppercase align-middle fw-medium">My Account</span>
       </div>
 
+      <div class="container d-flex align-items-center">
+        <label for="footerSettingsLanguage_mobile" class="me-2 text-secondary">Language</label>
+        <select id="footerSettingsLanguage_mobile" class="form-select form-select-sm bg-transparent border-0"
+                aria-label="Default select example" name="store-language">
+          <option class="footer-select__option" selected>United Kingdom | English</option>
+          <option class="footer-select__option" value="1">United States | English</option>
+          <option class="footer-select__option" value="2">German</option>
+          <option class="footer-select__option" value="3">French</option>
+          <option class="footer-select__option" value="4">Swedish</option>
+        </select>
+      </div>
 
-
-
+      <div class="container d-flex align-items-center">
+        <label for="footerSettingsCurrency_mobile" class="me-2 text-secondary">Currency</label>
+        <select id="footerSettingsCurrency_mobile" class="form-select form-select-sm bg-transparent border-0"
+                aria-label="Default select example" name="store-language">
+          <option selected>$ USD</option>
+          <option value="1">£ GBP</option>
+          <option value="2">€ EURO</option>
+        </select>
+      </div>
 
       <ul class="container social-links list-unstyled d-flex flex-wrap mb-0">
         <li>
@@ -414,14 +441,19 @@
           </a>
         </li>
       </ul>
-
+      <!--   <select class="form-select form-select-sm bg-transparent color-white" name="store-language">
+             <option value="english" selected>English</option>
+             <option value="german">German</option>
+             <option value="french">French</option>
+             <option value="swedish">Swedish</option>
+         </select>-->
 
     </div>
   </div>
   <div class="header-desk header-desk_type_1">
     <div class="logo">
       <a href="index.html">
-        <img src="/images/logo.png" alt="JuteGlo" class="logo__image d-block"/>
+        <img src="/images/logo.png" alt="Uomo" class="logo__image d-block"/>
       </a>
     </div><!-- /.logo -->
 
@@ -431,15 +463,22 @@
           <a href="index.html" class="navigation__link">Home</a>
         </li>
         <li class="navigation__item">
-          <a href="about.html" class="navigation__link">About Us</a>
+          <a href="#about" class="navigation__link">About Us</a>
 
         </li>
         <li class="navigation__item">
-          <a href="products.html" class="navigation__link">Products</a>
-
+          <a href="product.html" class="navigation__link">Products</a>
+          <ul class="default-menu list-unstyled">
+            <li class="sub-menu__item"><a href="#" class="menu-link menu-link_us-s">Promotional Jute
+              Bags</a></li>
+            <li class="sub-menu__item"><a href="#" class="menu-link menu-link_us-s">Bangladeshi Jute
+              Bags</a></li>
+            <li class="sub-menu__item"><a href="#" class="menu-link menu-link_us-s">Jute Fabrics</a></li>
+            <li class="sub-menu__item"><a href="#" class="menu-link menu-link_us-s">Jute Yarn</a></li>
+          </ul><!-- /.box-menu -->
         </li>
         <li class="navigation__item">
-          <a href="faq.html" class="navigation__link">Faq</a>
+          <a href="#faq" class="navigation__link">Faq</a>
 
         </li>
         <li class="navigation__item">
@@ -522,7 +561,7 @@
       <div class="footer-column footer-store-info col-12 mb-4 mb-lg-0">
         <div class="logo">
           <a href="index.html">
-            <img src="/images/logo.png" alt="JuteGlo" class="logo__image d-block"/>
+            <img src="/images/logo.png" alt="Uomo" class="logo__image d-block"/>
           </a>
         </div><!-- /.logo -->
         <p class="footer-address" style="text-align: justify">
@@ -579,9 +618,9 @@
         <ul class="sub-menu__list list-unstyled">
           <li class="sub-menu__item"><a href="index.html" class="menu-link menu-link_us-s">Home</a>
           </li>
-          <li class="sub-menu__item"><a href="about.html" class="menu-link menu-link_us-s">About Us</a></li>
+          <li class="sub-menu__item"><a href="#about" class="menu-link menu-link_us-s">About Us</a></li>
 
-          <li class="sub-menu__item"><a href="faq.html" class="menu-link menu-link_us-s">Faq</a>
+          <li class="sub-menu__item"><a href="#faq" class="menu-link menu-link_us-s">Faq</a>
           </li>
           <li class="sub-menu__item"><a href="contact.html" class="menu-link menu-link_us-s">Contact Us</a>
           </li>
@@ -606,7 +645,7 @@
 
   <div class="footer-bottom container">
     <div class="d-block d-md-flex align-items-center">
-      <span class="footer-copyright me-auto">©2023 JuteGlo . Designed by Frogbid</span>
+      <span class="footer-copyright me-auto">©2023 Uomo</span>
       <div class="footer-settings d-block d-md-flex align-items-center">
         <div class="d-flex align-items-center">
           <label for="footerSettingsLanguage" class="me-2 text-secondary">Language</label>
@@ -863,7 +902,7 @@
                       <a class="nav-link nav-link_rline" href="#"><span class="rline-content">JOIN LIFE</span></a>
                     </li>
                     <li class="nav-item position-relative" role="presentation">
-                      <a class="nav-link nav-link_rline" href="#"><span class="rline-content">#JuteGloSTYLE</span></a>
+                      <a class="nav-link nav-link_rline" href="#"><span class="rline-content">#UOMOSTYLE</span></a>
                     </li>
                   </ul>
 
@@ -1148,7 +1187,7 @@
                 <div id="Article-share-template__main" class="share-button__fallback flex items-center absolute top-full left-0 w-full px-2 py-4 bg-container shadow-theme border-t z-10">
                   <div class="field grow mr-4">
                     <label class="field__label sr-only" for="url">Link</label>
-                    <input type="text" class="field__input w-full" id="url" value="https://JuteGlo-crystal.myshopify.com/blogs/news/go-to-wellness-tips-for-mental-health" placeholder="Link" onclick="this.select();" readonly="">
+                    <input type="text" class="field__input w-full" id="url" value="https://uomo-crystal.myshopify.com/blogs/news/go-to-wellness-tips-for-mental-health" placeholder="Link" onclick="this.select();" readonly="">
                   </div>
                   <button class="share-button__copy no-js-hidden">
                     <svg class="icon icon-clipboard inline-block mr-1" width="11" height="13" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false" viewBox="0 0 11 13">
